--- a/abc/src/main/resources/application.properties
+++ b/abc/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=abc
+
+# H2 Database Configuration
+
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
